discussion/kv_engine/187490/187490_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

RangeScan rejig.

Moving the connection IO to frontend.

Currently no one is setting a continue back to idle as the currentStatus
is overloaded

success means new command but should mean go again.
range_scan_more should mean continue done.

Maybe needs cookie.

Change-Id: I17566daa37700a4caaf1f85152a4185929b29cf0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-03-02 15:11:07.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-02 15:47:56.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22827/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:129:12: error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
    folly::Synchronized<ScannedData, std::mutex> scannedData;
           ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22827/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:129:12:
error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22827/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43844/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:129:12:
error: no template named "Synchronized" in namespace "folly"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43844/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52271/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\range_scan_test.cc(1499): fatal error C1021: invalid preprocessor command "warning" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52271/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1625/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1625/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12638/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12638/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24460/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24460/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12559/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12559/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24889/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24889/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25346/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25346/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26199/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26199/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33306/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33306/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23043/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
